2001-05-25	Joel Sherrill <joel@OARcorp.com>

 	* Added once version of psxchroot01 test for user review.
	* psxchroot01: New directory.
	* psxchroot01/Makefile.am, psxchroot01/main.c, psxchroot01/test.c,
	psxchroot01/psxchroot01.scn, psxchroot01/.cvsignore: New files.
	* configure.in, Makefile.am: Modified to reflect above.

2001-05-10	Ralf Corsepius	<corsepiu@faw.uni-ulm.de>

	* configure.in: Use RTEMS_PROG_CC_FOR_TARGET([-ansi -fasm]).

2001-04-24	Joel Sherrill <joel@OARcorp.com>

 	* psxfile01/test.c, psxfile01/psxfile01.scn : Added test case for 
	open, write, reopen, append twice from Andrew Bythell
	<abythell@nortelnetworks.com> that tripped an initialization
	problem in the IMFS.

2001-04-20	Joel Sherrill <joel@OARcorp.com>

	* psx04/init.c, psx04/psx04.scn, psx07/init.c, psx07/psx07.scn,
	psxfile01/psxfile01.scn, psxmsgq01/psxmsgq01.scn, 
	psxreaddir/test.c, psxstat/psxstat.scn, psxstat/test.c,
	psxtime/psxtime.scn, psxtimer/psxtimer.scn:
	Various adjustments so test output matches screens more reliably.

2001-01-25	Joel Sherrill <joel@OARcorp.com>

	* psx01/psx01.scn: Corrected to reflect clock_getres() now working.

2000-11-17	Jennifer Averett <jennifer@OARcorp.com>

	* psxstat/test.c, psxstat/psxstat.scn: Forced inode numbers
	to remain consistant across platforms and bsps by forcing
	a mount point in front of all paths.

2000-11-17	Jennifer Averret <jennifer@OARcorp.com>

	* psxmount/test.c, psxmount/psxmount.scn: Improve output to report
	expected error condition in one case.
	* psxreaddir/test.c, psxreaddir.scn: Added test cases to exercise
	readdir() of root of mounted filesystem.  Also corrected the screen
	file for some mistakes noticed in this effort.

2000-11-13	Joel Sherrill <joel@OARcorp.com>

	* psxmount/psxmount.scn, psxmount/test.c: Correct spelling.

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
