@@ -1,3 +1,9 @@
-*** CHROOT TEST ***
-FILL ME IN ONCE TEST IS SATISFACTORY
-*** END OF CHROOT TEST ***
+
+
+*** CHROOT01 TEST ***
+SUCCESS on /one/one.test
+SUCCESS on /two/two.test
+Reset the private environment
+SUCCESS on /one/one.test
+SUCCESS on /two/two.test
+*** END OF CHROOT01 TEST ***
